--- a/h618/zh/10-系统镜像烧录.md
+++ b/h618/zh/10-系统镜像烧录.md
@@ -72,7 +72,7 @@ PhoenixSuit/Drivers/AW_Driver/
 
 **主板进入烧录模式**
 
-1. 按住 FEL升级键
+1. 按住RECOVERY烧录按键（板子背面的maskrom按键进入强烧模式）
 2. 主板上电，如果已上电则需重新上电（按一下复位键）
 
 ![image-20240306170511855](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240306170511855.png)
@@ -138,7 +138,7 @@ PhoenixSuit/Drivers/AW_Driver/
 
 操作步骤：
 
-1. 按住 FEL升级键
+1. 按住 RECOVERY烧录按键
 2. 主板上电，如果已上电则需重新上电（按一下复位键）
 
 ![image-20240306170600024](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240306170600024.png)
