--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -2,6 +2,12 @@
 
 [TOC]
 
+## 说明
+
+sdk - 指代源码 ，详情见 SDK源码编译
+
+
+
 ## 固件烧录
 
 工具是在源码中可以找到，备份了一份在网盘 5-DevelopmentTool开发工具下
@@ -14,16 +20,16 @@ RK3576平台windows固件烧写工具必现使用V3.28及以上版本
 
 Windows烧写工具：
 
-网盘：
+网盘中路径：
 
 ```
 5-DevelopmentTool/AndroidTool/
 ```
 
-源码：
+源码中路径：
 
 ```
-RKTools/windows/AndroidTool/AndroidTool_Release_v3.28
+（sdk）/RKTools/windows/AndroidTool/AndroidTool_Release_v3.28
 ```
 
 
