--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -10,13 +10,13 @@ sdk - 指代源码 ，详情见 SDK源码编译
 
 ## 固件烧录
 
+### 工具路径
+
 工具是在源码中可以找到，备份了一份在网盘 5-DevelopmentTool开发工具下
 
 Android14的USB驱动DriverAssitant需要更新到V5.1.1版本，可以参考下面的工具章节进行更新。
 
 RK3576平台windows固件烧写工具必现使用V3.28及以上版本
-
-
 
 Windows烧写工具：
 
@@ -31,6 +31,8 @@ Windows烧写工具：
 ```
 （sdk）/RKTools/windows/AndroidTool/AndroidTool_Release_v3.28
 ```
+
+
 
 
 
