--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -10,7 +10,7 @@ sdk - 指代源码 ，详情见 SDK源码编译
 
 ## 固件烧录
 
-### 工具路径
+### AndroidTool工具路径
 
 工具是在源码中可以找到，备份了一份在网盘 5-DevelopmentTool开发工具下
 
@@ -34,7 +34,9 @@ Windows烧写工具：
 
 
 
-安装USB驱动
+### 安装USB驱动
+
+USB驱动
 
 
 
