--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -29,7 +29,7 @@ Windows烧写工具：
 源码中路径：
 
 ```
-（sdk）/RKTools/windows/AndroidTool/AndroidTool_Release_v3.28
+（sdk）/RKTools/windows/AndroidTool/
 ```
 
 
@@ -39,7 +39,7 @@ Windows烧写工具：
 USB驱动路径在 
 
 ```
-AndroidTool/
+AndroidTool/DriverAssitant_v5.13.zip
 ```
 
 
