--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -36,13 +36,13 @@ Windows烧写工具：
 
 ### 安装USB驱动
 
-USB驱动路径在 
+USB驱动路径
 
 ```
 AndroidTool/DriverAssitant_v5.13.zip
 ```
 
-
+解压，打开 DriverAssitant
 
 
 
