--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -36,15 +36,23 @@ Windows烧写工具：
 
 ### 安装USB驱动
 
-USB驱动路径
+**USB驱动路径**
 
 ```
 AndroidTool/DriverAssitant_v5.13.zip
 ```
 
-解压，打开 DriverAssitant
+解压，打开 DriverAssitant 文件
+
+找到 DriverInstall.exe ，双击运行
 
 
+
+**USB设备验证**
+
+
+
+![image-20241025101105194](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241025101105194.png)
 
 
 
