--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -42,7 +42,7 @@ Windows烧写工具：
 AndroidTool/DriverAssitant_v5.13.zip
 ```
 
-解压，打开 DriverAssitant 文件
+将 DriverAssitant_v5.13.zip 解压，打开解压后的文件夹
 
 找到 DriverInstall.exe ，双击运行
 
