--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -46,6 +46,8 @@ AndroidTool/DriverAssitant_v5.13.zip
 
 找到 DriverInstall.exe ，双击运行
 
+![image-20241025101533688](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241025101533688.png)
+
 
 
 **USB设备验证**
