--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -50,6 +50,8 @@ AndroidTool/DriverAssitant_v5.13.zip
 
 
 
+![image-20241025101606583](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241025101606583.png)
+
 **USB设备验证**
 
 
