--- a/a133/zh/10-系统镜像烧录.md
+++ b/a133/zh/10-系统镜像烧录.md
@@ -66,7 +66,7 @@ a133_android10_c3_uart0-lvds-7-*.img
 a133_android10_c3_uart0-lvds-21-*.img
 a133_linux_c3_uart0_lvds-7-1024-600-desktop_xfce_*.img
 
-根据img名称可识别对应的含义
+根据img名称词条可选择对应的镜像进行烧录
 	android10
 ```
 
