--- a/a133/zh/10-系统镜像烧录.md
+++ b/a133/zh/10-系统镜像烧录.md
@@ -68,7 +68,7 @@ a133_linux_c3_uart0_lvds-7-1024-600-desktop_xfce_*.img
 
 根据img名称词条可选择对应的镜像进行烧录
 	android10 - 代表 Android10.0 Tablet 平板系统
-	
+	linux 
 ```
 
 
