--- a/a133/zh/10-系统镜像烧录.md
+++ b/a133/zh/10-系统镜像烧录.md
@@ -70,6 +70,7 @@ a133_linux_c3_uart0_lvds-7-1024-600-ubuntu1604_xfce_*.img
 	android10 - 代表 Android10.0 Tablet 平板系统
 	ubuntu1604 - 代表 Ubuntu 16.04 系统
 	lvds-7-1024-600
+	lvds-21-1920-1080
 ```
 
 
