--- a/a133/zh/10-系统镜像烧录.md
+++ b/a133/zh/10-系统镜像烧录.md
@@ -71,7 +71,7 @@ a133_linux_c3_uart0_lvds-7-1024-600-ubuntu1604_xfce_*.img
 	ubuntu1604 - 代表 Ubuntu 16.04 系统
 	lvds-7-1024-600 代表 软件适配的为 signal lvds 1024*600 的屏 （内部的屏）
 	lvds-21-1920-1080 代表 软件适配的为 dual lvds 1920*1080 的屏 
-	xfce
+	xfce - 代表 xfce 桌面
 ```
 
 
