--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -435,6 +435,14 @@ hcitool scan
 
 ```
 pppd call quectel-ppp &
+
+ping www.baidu.com 测试
+
+可能会出现没播通情况
+jobs   // 查看后台
+fg %1 
+ctrl + c 
+重新拨号 pppd call quectel-ppp &
 ```
 
 
