--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -439,6 +439,7 @@ pppd call quectel-ppp &
 ping www.baidu.com 测试
 
 可能会出现没播通情况
+
 通过切换后台程序杀掉
 jobs   // 查看后台
 fg %1 
@@ -447,7 +448,7 @@ ctrl + c
 
 或者通过ps -ef | grep pppd 查看进程号
 kill -9 (进程号)
-
+重新拨号 pppd call quectel-ppp &
 ```
 
 
