--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -434,6 +434,17 @@ hcitool scan
 4G 模块测试
 
 ```
+确认串口结点是否生成
+ls /dev/ttyUSB*
+
+插拔电话卡重新拨号
+```
+
+
+
+
+
+```
 pppd call quectel-ppp &
 
 ping www.baidu.com 测试
