--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -64,6 +64,10 @@ AndroidTool/DriverAssitant_v5.13.zip
 
 ### 烧录工具说明
 
+
+
+更详细详细使用说明见
+
 ```
 AndroidTool/RKDevTool_v3.30_for_window/RKDevTool_v3.30_for_window/开发工具使用文档_v1.0.pdf
 ```
