--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -54,7 +54,9 @@ AndroidTool/DriverAssitant_v5.13.zip
 
 **USB设备验证**
 
+通过 type-c 连接主板和PC电脑
 
+打开电脑中设备管理器
 
 ![image-20241025101105194](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241025101105194.png)
 
