--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -54,9 +54,10 @@ AndroidTool/DriverAssitant_v5.13.zip
 
 **USB设备验证**
 
-通过 type-c 连接主板和PC电脑
+1. 使用 type-c 连接主板和PC电脑
 
-打开电脑中设备管理器
+2. 打开电脑中设备管理器
+3. 可以查看到usb设备
 
 ![image-20241025101105194](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241025101105194.png)
 
