--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -54,14 +54,24 @@ AndroidTool/DriverAssitant_v5.13.zip
 
 **USB设备验证**
 
-1. 使用 type-c 连接主板和PC电脑
+1. 主板上电，准备一个能传输文件的 type-c 线
+2. 使用 type-c 连接主板和PC电脑
 
-2. 打开电脑中设备管理器
-3. 可以查看到usb设备
+3. 打开电脑中设备管理器
+
+4. 可以查看到usb设备，说明USB驱动安装成功
 
 ![image-20241025101105194](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241025101105194.png)
 
 
+
+**不识别问题**
+
+1. 确认主板已经上电
+
+2. DriverInstall.exe ，尝试驱动卸载，再进行驱动安装
+
+3. 反馈咨询客服
 
 
 
