--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -79,6 +79,16 @@ AndroidTool/DriverAssitant_v5.13.zip
 
 ### 使用烧录工具
 
+烧录工具
+
+```
+AndroidTool/RKDevTool_v3.30_for_window.zip
+```
+
+解压 RKDevTool_v3.30_for_window.zip 压缩文件，
+
+
+
 
 
 更详细详细使用说明见
