--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -85,7 +85,11 @@ AndroidTool/DriverAssitant_v5.13.zip
 AndroidTool/RKDevTool_v3.30_for_window.zip
 ```
 
-解压 RKDevTool_v3.30_for_window.zip 压缩文件，
+解压 RKDevTool_v3.30_for_window.zip 压缩文件，在文件下找到 RKDevTool.exe ，双击打开
+
+
+
+
 
 
 
