--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -87,7 +87,7 @@ AndroidTool/RKDevTool_v3.30_for_window.zip
 
 解压 RKDevTool_v3.30_for_window.zip 压缩文件，在文件下找到 RKDevTool.exe ，双击打开
 
-
+![image-20241025161627415](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241025161627415.png)
 
 
 
