--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -91,11 +91,41 @@ AndroidTool/RKDevTool_v3.30_for_window.zip
 
 
 
+**LOADER模式烧录**
+
+按下RECOVERY按键，上电 （或者按复位进行复位）
+
+瑞芯微开发工具上能够识别到LOADER设备，
+
+点击升级固件，跳转到升级固件界面
+
+点击固件，选择要烧录的镜像
+
+点击升级
+
+等待烧录完成
 
 
 
+MASKROM模式烧录
 
-更详细详细使用说明见
+按下MASKROM按键，上电 （或者按复位进行复位）
+
+瑞芯微开发工具上能够识别到LOADER设备，
+
+点击升级固件，跳转到升级固件界面
+
+点击固件，选择要烧录的镜像
+
+点击升级
+
+等待烧录完成
+
+
+
+**更多使用说明**
+
+烧录工具更多详细说明见
 
 ```
 /RKDevTool_v3.30_for_window/开发工具使用文档_v1.0.pdf
