--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -91,7 +91,7 @@ AndroidTool/RKDevTool_v3.30_for_window.zip
 
 
 
-**LOADER模式烧录**
+#### **LOADER模式烧录**
 
 按下RECOVERY按键，上电 （或者按复位进行复位）
 
@@ -107,7 +107,9 @@ AndroidTool/RKDevTool_v3.30_for_window.zip
 
 
 
-MASKROM模式烧录
+#### MASKROM模式烧录
+
+方式一
 
 按下MASKROM按键，上电 （或者按复位进行复位）
 
@@ -123,6 +125,8 @@ MASKROM模式烧录
 
 
 
+方式二
+
 按下板子背后的MASKROM按键，上电 （或者按复位进行复位）
 
 瑞芯微开发工具上能够识别到LOADER设备，
@@ -137,7 +141,7 @@ MASKROM模式烧录
 
 
 
-**更多使用说明**
+#### **更多说明**
 
 烧录工具更多详细说明见
 
