--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -91,6 +91,8 @@ AndroidTool/RKDevTool_v3.30_for_window.zip
 
 
 
+
+
 #### **LOADER模式烧录**
 
 按下RECOVERY按键，上电 （或者按复位进行复位）
@@ -104,6 +106,8 @@ AndroidTool/RKDevTool_v3.30_for_window.zip
 点击升级
 
 等待烧录完成
+
+> 此模式下，可以进行分区烧录，详情见更多说明
 
 
 
@@ -138,6 +142,8 @@ AndroidTool/RKDevTool_v3.30_for_window.zip
 点击升级
 
 等待烧录完成
+
+>此模式下不能分区烧录
 
 
 
