--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -50,9 +50,11 @@ AndroidTool/DriverAssitant_v5.13.zip
 
 ![image-20241025101533688](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241025101533688.png)
 
-
+点击驱动安装，提示安装成功
 
 ![image-20241025101606583](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241025101606583.png)
+
+
 
 **USB设备验证**
 
@@ -64,6 +66,8 @@ AndroidTool/DriverAssitant_v5.13.zip
 4. 可以查看到usb设备，说明USB驱动安装成功
 
 ![image-20241025101105194](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241025101105194.png)
+
+
 
 
 
