--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -95,11 +95,13 @@ AndroidTool/RKDevTool_v3.30_for_window.zip
 
 
 
-#### **LOADER模式烧录**
+#### **LOADER模式/MASKROM烧录**
 
 按下RECOVERY按键，上电 （或者按复位进行复位）
 
-瑞芯微开发工具上能够识别到LOADER设备，
+按下MASKROM按键，上电 （或者按复位进行复位）/ 按下板子背后的MASKROM按键，上电 （或者按复位进行复位）
+
+瑞芯微开发工具上能够识别到LOADER设备 / 瑞芯微开发工具上能够识别到LOADER设备
 
 点击升级固件，跳转到升级固件界面
 
@@ -117,9 +119,9 @@ AndroidTool/RKDevTool_v3.30_for_window.zip
 
 方式一
 
-按下MASKROM按键，上电 （或者按复位进行复位）
 
-瑞芯微开发工具上能够识别到LOADER设备，
+
+
 
 点击升级固件，跳转到升级固件界面
 
@@ -133,7 +135,7 @@ AndroidTool/RKDevTool_v3.30_for_window.zip
 
 方式二
 
-按下板子背后的MASKROM按键，上电 （或者按复位进行复位）
+
 
 瑞芯微开发工具上能够识别到LOADER设备，
 
