--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -95,11 +95,16 @@ AndroidTool/RKDevTool_v3.30_for_window.zip
 
 
 
-#### **LOADER模式/MASKROM烧录**
+#### **LOADER/MASKROM模式烧录**
 
-按下RECOVERY按键，上电 （或者按复位进行复位）
+```
+LOADER模式：可分区烧录，未做其他操作重启仍能正常启动系统
+MASKROM模式：不可分区烧录，强制擦除软件
+```
 
-按下MASKROM按键，上电 （或者按复位进行复位）/ 按下板子背后的MASKROM按键，上电 （或者按复位进行复位）
+LOADER模式：按下RECOVERY按键，上电 （或者按复位进行复位）
+
+MASKROM烧录：按下MASKROM按键，上电 （或者按复位进行复位）/ 按下板子背后的MASKROM按键，上电 （或者按复位进行复位）
 
 瑞芯微开发工具上能够识别到LOADER设备 / 瑞芯微开发工具上能够识别到LOADER设备
 
