--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -279,6 +279,23 @@ console:/ # echo 0 > /sys/class/leds/fan_en/brightness
 
 
 
+## tinycap录音
+
+```
+console:/ # tinycap
+Usage: tinycap file.wav [-D card] [-d device] [-c channels] [-r rate] [-b bits] [-p period_size] [-n n_periods] [-T capture time]
+```
+
+
+
+```
+tinycap file.wav -D 0 -d 0  -c 2 -r 48000 -b 16 -T 10
+```
+
+
+
+
+
 ## Linux 功能测试
 
 音频工具环境
@@ -363,7 +380,16 @@ amixer cget numid=13,iface=MIXER,name='ADCR Input MIC2 Boost Switch'
 ```
 arecord test.wav
 arecord -r 16000 -f S16_LE -d 5 test.wav
+arecord -r 48000 -f S16_LE -d 5 test.wav -c 2
 ```
+
+```
+-r 代表 rate
+目前测试：
+
+```
+
+
 
 
 
@@ -491,4 +517,109 @@ u盘 、sd卡
 ```
 fdisk -l
 ```
+
+
+
+## NFS配置
+
+**环境配置**
+
+```
+sudo apt install nfs-kernel-server
+sudo apt install rpcbind
+sudo apt install nfs-common
+```
+
+
+
+**服务器端**
+
+1. 配置共享的文件
+
+```
+$ mkdir /home/huangcm/nfs_share
+$ chmod 777 /home/huangcm/nfs_share
+$ vi /etc/exports
+# /etc/exports: the access control list for filesystems which may be exported
+#               to NFS clients.  See exports(5).
+#
+# Example for NFSv2 and NFSv3:
+# /srv/homes       hostname1(rw,sync,no_subtree_check) hostname2(ro,sync,no_subtree_check)
+#
+# Example for NFSv4:
+# /srv/nfs4        gss/krb5i(rw,sync,fsid=0,crossmnt,no_subtree_check)
+# /srv/nfs4/homes  gss/krb5i(rw,sync,no_subtree_check)
+# 
+/home/huangcm/nfs_share *(rw,sync,no_subtree_check,insecure)
+```
+
+
+
+2. 启动服务
+
+```
+sudo service nfs-kernel-server restart
+```
+
+
+
+3. 查看当前服务器共享文件，证明共享成果
+
+```
+$  showmount -e localhost
+Export list for localhost:
+/home/huangcm/nfs_share *
+```
+
+
+
+**客户端**
+
+1. 查看服务器共享文件
+
+```
+showmount -e 192.168.199.173
+Export list for 192.168.199.173:
+/home/huangcm/nfs_share *
+```
+
+
+
+2. 挂载文件夹
+
+```
+$ mkdir nfs_tmp
+$ sudo mount -t nfs 192.168.199.173:/home/huangcm/nfs_share nfs_tmp/
+```
+
+
+
+3. 挂载成功
+
+```
+$ ls nfs_tmp/
+1.txt
+```
+
+   
+
+## xfce 桌面问题
+
+**状态栏在哪里**
+
+​		桌面上的长方形框，可以右键随意设置
+
+
+
+**浏览器无法打开**
+
+​		Failed to execute default Web Browser
+
+​		浏览器默认会打开火狐浏览器，需要下载
+
+```
+sudo apt install firefox
+```
+
+
 
