--- a/h618/zh/10-系统镜像烧录.md
+++ b/h618/zh/10-系统镜像烧录.md
@@ -72,8 +72,13 @@ PhoenixSuit/Drivers/AW_Driver/
 
 **主板进入烧录模式**
 
-1. 按住RECOVERY烧录按键（板子背面的maskrom按键进入强烧模式）
+1. 按住RECOVERY烧录按键（或板子背面的maskrom按键进入强烧模式）
+
 2. 主板上电，如果已上电则需重新上电（按一下复位键）
+
+3. 复位后，烧录键三秒左右后松开
+
+   > 详细教程如下面
 
 ![image-20240306170511855](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240306170511855.png)
 
@@ -103,7 +108,19 @@ PhoenixSuit/Drivers/AW_Driver/
 
 ![image-20221129104725698](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20221129104725698.png)
 
+### FAQ
 
+1.遇到兼容性错误
+
+![image-20241026114145257](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241026114145257.png)
+
+解决方法参考Microsoft解决方法
+
+Microsoft官方链接
+
+https://support.microsoft.com/zh-cn/windows/%E6%97%A0%E6%B3%95%E5%9C%A8%E6%AD%A4%E8%AE%BE%E5%A4%87%E4%B8%8A%E5%8A%A0%E8%BD%BD%E9%A9%B1%E5%8A%A8%E7%A8%8B%E5%BA%8F-8eea34e5-ff4b-16ec-870d-61a4a43b3dd5
+
+![image-20241026114443290](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241026114443290.png)
 
 ### 安装镜像烧录工具
 
@@ -138,8 +155,10 @@ PhoenixSuit/Drivers/AW_Driver/
 
 操作步骤：
 
-1. 按住 RECOVERY烧录按键
+1. 按住 RECOVERY烧录按键（或板子背面的maskrom按键进入强烧模式）
 2. 主板上电，如果已上电则需重新上电（按一下复位键）
+3. 按一下复位后，烧录键三秒左右松开
+4. 如果电脑有打开烧录软件，会有弹窗提示 (如果没有请多尝试几次上面步骤)
 
 ![image-20240306170600024](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240306170600024.png)
 
@@ -266,15 +285,7 @@ SD卡烧录工具建议使用balenaEtcher，可从网盘以下目录下载，或
 sudo nand-sata-install
 ```
 
-
-
-```
-sudo 
-```
-
-
-
-
+回车选择 默认选项即可
 
 ### Linux系统登陆用户密码
 
