--- a/rk356x/zh/10-系统镜像烧录.md
+++ b/rk356x/zh/10-系统镜像烧录.md
@@ -74,7 +74,9 @@ SDK编译详细步骤参考文档 \[02-SDK编译]
 
 1. 通过网盘下载镜像烧录工具后，解压文件夹，得到以下目录列表
 
+![image-20241025184222743](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241025184222743.png)
 
+> 工具使用请细看开发工具使用文档。
 
 2. 修改镜像烧录工具语言（可选）
 
@@ -165,6 +167,8 @@ Maskrom模式 常用于系统损坏后，强制烧录镜像
 Debian系统用户名/密码：linaro/linaro
 
 Ubuntu系统用户名/密码：kickpi/kickpi
+
+​					     rpdzkj/rpdzkj
 
 
 
