--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -98,8 +98,8 @@ AndroidTool/RKDevTool_v3.30_for_window.zip
 #### **LOADER/MASKROM模式烧录**
 
 ```
-LOADER模式：可分区烧录，未做其他操作重启仍能正常启动系统
-MASKROM模式：不可分区烧录，强制擦除软件
+LOADER模式：可分区烧录
+MASKROM模式：不可分区烧录
 ```
 
 步骤一
