--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -347,7 +347,7 @@ numid=14,iface=MIXER,name='Headphone Switch'
 
 
 
-开启耳机开关
+### 开启耳机开关
 
 ```
 # amixer cset numid=14,iface=MIXER,name='Headphone Switch' 1
@@ -358,7 +358,7 @@ numid=14,iface=MIXER,name='Headphone Switch'
 
 
 
-麦克风开关
+### 麦克风开关
 
 ```
 numid=12,iface=MIXER,name='ADCL Input MIC1 Boost Switch'
@@ -375,7 +375,7 @@ amixer cget numid=13,iface=MIXER,name='ADCR Input MIC2 Boost Switch'
 
 
 
-录音测试
+### 录音测试
 
 ```
 arecord test.wav
@@ -391,9 +391,7 @@ arecord -r 48000 -f S16_LE -d 5 test.wav -c 2
 
 
 
-
-
-播放测试
+### 播放测试
 
 ```
 aplay test.wav
@@ -402,7 +400,9 @@ play test/Music/1.mp3
 
 
 
-喇叭控制 (音频流同耳机，所以必须同时打开耳机开关)
+### 喇叭控制
+
+ (音频流同耳机，所以必须同时打开耳机开关)
 
 ```
 打开
@@ -414,7 +414,7 @@ echo 0 > /sys/class/leds/spk_en/brightness
 
 
 
-风扇开关
+### 风扇开关
 
 ```
 打开
@@ -425,7 +425,7 @@ echo 0 > /sys/class/leds/fan_en/brightness
 
 
 
-wifi 测试
+### wifi 测试
 
 ```
 查看网络设备列表
@@ -447,7 +447,7 @@ sudo nmcli dev wifi connect "SSID" password "PASSWORD" ifname wlan0
 
 
 
-蓝牙测试
+### 蓝牙测试
 
 ```
 sudo apt-get install bluez
@@ -457,7 +457,7 @@ hcitool scan
 
 
 
-4G 模块测试
+### 4G 模块测试
 
 ```
 确认usb模块是否加载
@@ -493,7 +493,7 @@ kill -9 (进程号)
 
 
 
-sd卡 测试
+### sd卡 测试
 
 ```
 mount /dev/mmcblk1p1 /mnt/
@@ -501,7 +501,7 @@ mount /dev/mmcblk1p1 /mnt/
 
 
 
-触摸测试
+### 触摸测试
 
 ```
 cat /proc/bus/input/devices
@@ -512,7 +512,7 @@ evtest
 
 
 
-u盘 、sd卡
+### u盘 、sd卡
 
 ```
 fdisk -l
