--- a/rk356x/zh/40-RK3568 LCD配置.md
+++ b/rk356x/zh/40-RK3568 LCD配置.md
@@ -197,6 +197,16 @@ i2c_gt9xx配置：
 
 
 
+### 旋转触摸方向
+
+```
+gt9xx:gt9xx@5d {
+	gtp_change_x2y = <0>;
+	gtp_overturn_x = <0>;
+	gtp_overturn_y = <0>;
+};
+```
+
 
 
 
