--- a/rk356x/zh/40-RK3568 LCD配置.md
+++ b/rk356x/zh/40-RK3568 LCD配置.md
@@ -199,6 +199,8 @@ i2c_gt9xx配置：
 
 ### 旋转触摸方向
 
+
+
 ```
 gt9xx:gt9xx@5d {
 	gtp_change_x2y = <0>;		
@@ -208,6 +210,34 @@ gt9xx:gt9xx@5d {
 ```
 
 
+
+```
+gt9xx:gt9xx@5d {
+	gtp_change_x2y = <1>;
+	gtp_overturn_x = <1>;
+	gtp_overturn_y = <0>;
+};
+```
+
+
+
+```
+gt9xx:gt9xx@5d {
+	gtp_change_x2y = <0>;
+	gtp_overturn_x = <0>;
+	gtp_overturn_y = <1>;
+};
+```
+
+
+
+```
+gt9xx:gt9xx@5d {
+	gtp_change_x2y = <0>;
+	gtp_overturn_x = <1>;
+	gtp_overturn_y = <0>;
+};
+```
 
 
 
