--- a/t113-s3/zh/10-系统镜像烧录.md
+++ b/t113-s3/zh/10-系统镜像烧录.md
@@ -2,7 +2,7 @@
 
 
 
-## 1. Android eMMC镜像烧录
+## 1. 镜像烧录
 
 开发板出厂默认烧录好镜像，若不需要更换系统的话，可直接跳过此步骤，启动系统
 
@@ -169,8 +169,3 @@ https://support.microsoft.com/zh-cn/windows/%E6%97%A0%E6%B3%95%E5%9C%A8%E6%AD%A4
 
 
 
-### Android桌面界面
-
-主板连接HDMI显示器，系统启动成功后，界面如下
-
-![image-20240306171855522](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240306171855522.png)
