--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -95,7 +95,7 @@ AndroidTool/RKDevTool_v3.30_for_window.zip
 
 
 
-#### **LOADER/MASKROM模式烧录**
+#### **LOADER/MASKROM模式整包烧录**
 
 ```
 LOADER模式：可分区烧录
@@ -118,17 +118,13 @@ MASKROM模式：不可分区烧录
 
 步骤四
 
-​		点击固件，选择要烧录的镜像
+​		点击固件，选择要烧录的镜像 update-*.img
 
 步骤五
 
 ​		点击升级
 
 ​		等待烧录完成
-
-
-
-
 
 
 
