--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -98,7 +98,7 @@ AndroidTool/RKDevTool_v3.30_for_window.zip
 #### **LOADER/MASKROM模式整包烧录**
 
 ```
-LOADER模式：可分区烧录
+LOADER模式：可分区烧录，分区烧录，详情见更多说明
 MASKROM模式：不可分区烧录
 ```
 
@@ -125,48 +125,6 @@ MASKROM模式：不可分区烧录
 ​		点击升级
 
 ​		等待烧录完成
-
-
-
-> 此模式下，可以进行分区烧录，详情见更多说明
-
-
-
-#### MASKROM模式烧录
-
-方式一
-
-
-
-
-
-点击升级固件，跳转到升级固件界面
-
-点击固件，选择要烧录的镜像
-
-点击升级
-
-等待烧录完成
-
-
-
-方式二
-
-
-
-瑞芯微开发工具上能够识别到LOADER设备，
-
-点击升级固件，跳转到升级固件界面
-
-点击固件，选择要烧录的镜像
-
-点击升级
-
-等待烧录完成
-
-
-
->此模式下不能分区烧录
 
 
 
