--- a/a133/zh/10-系统镜像烧录.md
+++ b/a133/zh/10-系统镜像烧录.md
@@ -2,7 +2,7 @@
 
 [TOC]
 
-K5 目前提供 Android10.0 镜像, 可使用 `USB烧录线` 把镜像烧录到板载eMMC
+K5 目前提供 Android10.0 以及 ubuntu16.04 镜像, 可使用 `USB烧录线` 把镜像烧录到板载eMMC
 
 
 
