--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -95,7 +95,9 @@ AndroidTool/RKDevTool_v3.30_for_window.zip
 
 
 
-#### **LOADER/MASKROM模式整包烧录**
+#### **整包烧录**
+
+LOADER / MASKROM模式
 
 ```
 LOADER模式：可分区烧录，分区烧录，详情见更多说明
