--- a/rk3576/zh/12-功能使用说明.md
+++ b/rk3576/zh/12-功能使用说明.md
@@ -2,13 +2,13 @@
 
 [TOC]
 
-### 串口
+### 调试串口
 
 40PIN座子右下脚 35-RX ，37-TX  ，39 - GND
 
 波特率：1500000 
 
-（串口转USB工具也需要支持 1500000才能正常显示）
+（接入座子的串口转USB工具也需要支持 1500000才能正常显示）
 
 
 
