--- a/h618/zh/13-I2C3-pcf8563rtc修改.md
+++ b/h618/zh/13-I2C3-pcf8563rtc修改.md
@@ -1,24 +1,24 @@
 # 13-I2C3-pcf8563rtc
 
-###  Peripheral wiring
+### 外设接线
 
-The peripheral pcf8563rtc is connected to the i2c in the expansion port
+外设pcf8563rtc接在扩展口中的i2c中
 
 ![image-20241101111011769](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241101111011769.png)
 
-Actual connection
+实际接线
 
 ![image-20241101111421019](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241101111421019.png)
 
-### Device driver porting
+### 设备驱动移植
 
-The SDK of H618 comes with pcf8563 driver port by default, which is not introduced in detail here
+​	H618的SDK默认自带有pcf8563的驱动移植，这里不做详细介绍
 
-Drive migration
-Put the driver under h618-android12.0\longan\kernel\linux-5.4\drivers\rtc,
+​	驱动移植
+​	将驱动放到 h618-android12.0\longan\kernel\linux-5.4\drivers\rtc 下，
 
-Modify the Makefile to add obj-$(CONFIG_RTC_DRV_PCF8563) += rtc-pcf8563.o
-Modified Kconfig added
+​	修改Makefile 增加 obj-$(CONFIG_RTC_DRV_PCF8563)	+= rtc-pcf8563.o 
+​	修改Kconfig 增加
 
 ```
 //make menuconfig 的选项
@@ -34,7 +34,7 @@ config RTC_DRV_PCF8563
 
 ```
 
-Kernel enable
+内核使能
 
 ```
 --- a/longan/kernel/linux-5.4/arch/arm64/configs/sun50iw9p1smp_h618_android_defconfig
@@ -52,7 +52,7 @@ Kernel enable
 
 ```
 
-### An rtc node is added to the I2C3 device tree
+### 设备树I2C3上增加rtc节点
 
 ```
 --- a/longan/device/config/chips/h618/configs/p2/linux-5.4/board.dts
