--- a/h618/en/13-I2C3-pcf8563rtc.md
+++ b/h618/en/13-I2C3-pcf8563rtc.md
@@ -1,24 +1,24 @@
 # 13-I2C3-pcf8563rtc
 
-### 外设接线
+### Peripheral wiring
 
-外设pcf8563rtc接在扩展口中的i2c中
+The peripheral pcf8563rtc is connected to the i2c in the expansion port
 
 ![image-20241101111011769](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241101111011769.png)
 
-实际接线
+Actual connection
 
 ![image-20241101111421019](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241101111421019.png)
 
-### 设备驱动移植
+###  Device driver porting
 
-​	H618的SDK默认自带有pcf8563的驱动移植，这里不做详细介绍
+​	The SDK of H618 comes with pcf8563 driver port by default, which is not introduced in detail here
 
-​	驱动移植
-​	将驱动放到 h618-android12.0\longan\kernel\linux-5.4\drivers\rtc 下，
+​	Drive migration
+​	Put the driver under h618-android12.0\longan\kernel\linux-5.4\drivers\rtc,
 
-​	修改Makefile 增加 obj-$(CONFIG_RTC_DRV_PCF8563)	+= rtc-pcf8563.o 
-​	修改Kconfig 增加
+​	Modify the Makefile to add obj-$(CONFIG_RTC_DRV_PCF8563) += rtc-pcf8563.o
+​	Modified Kconfig added
 
 ```
 //make menuconfig 的选项
@@ -34,7 +34,7 @@ config RTC_DRV_PCF8563
 
 ```
 
-内核使能
+Kernel enable
 
 ```
 --- a/longan/kernel/linux-5.4/arch/arm64/configs/sun50iw9p1smp_h618_android_defconfig
@@ -52,7 +52,7 @@ config RTC_DRV_PCF8563
 
 ```
 
-### 设备树I2C3上增加rtc节点
+### An rtc node is added to the I2C3 device tree
 
 ```
 --- a/longan/device/config/chips/h618/configs/p2/linux-5.4/board.dts
@@ -73,3 +73,4 @@ config RTC_DRV_PCF8563
 
 ```
 
+### 
