--- a/h618/en/13-I2C3-pcf8563rtc.md
+++ b/h618/en/13-I2C3-pcf8563rtc.md
@@ -73,4 +73,22 @@ Kernel enable
 
 ```
 
-### 
+***\*【 Test whether the rtc driver works normally with date and hwclock 】
+**** In general, the simplest step to test whether rtc is working properly is to load the rtc driver (or its own driver has been compiled into the kernel) :
+1. Display the current Linux system time
+date
+[2] If the date is also out of whack, like 1970 or something, rather than my current time, like 2009, then manually set the correct time yourself
+date MMDDhhmm[[[YY]YY][.ss]][.ss]
+3. Display the hardware rtc time
+hwclock
+Since this is the first time for the rtc driver to load, the correct time has not been set, so the time displayed at this time is mostly incorrect in 1969,1970.
+4. Set the Linux system time to the hardware rtc
+hwclock -w
+5. Check whether the hardware rtc time is the same as that in the system
+hwclcok
+If the driver is working correctly, the time shown here should be consistent with your current system time, which is the legendary time synchronization...
+Otherwise, it means that your driver is not working correctly, and the system time is not correctly set into the hardware rtc, so you have to go back to debugging the driver and find the reason.
+6. Wait a few seconds and type again:
+hwclock
+If it is normal, you will see the time here, with the corresponding number of seconds added to the time shown in Step 5
+That means the rtc is working properly.
