--- a/h618/en/13-I2C3-pcf8563rtc.md
+++ b/h618/en/13-I2C3-pcf8563rtc.md
@@ -64,9 +64,9 @@ Kernel enable
 +
 +    pcf8563:pcf8563@51 {
 +        compatible = "nxp,pcf8563";
-+        reg = <0x51>;  /* I2C 地址 */
++        reg = <0x51>;  /* I2C address */
 +
-+        status = "okay";  /* 表示设备可用 */
++        status = "okay";
 +               #clock-cells = <0>;
 +    };
  };
@@ -75,6 +75,7 @@ Kernel enable
 
 ***\*【 Test whether the rtc driver works normally with date and hwclock 】
 **** In general, the simplest step to test whether rtc is working properly is to load the rtc driver (or its own driver has been compiled into the kernel) :
+
 1. Display the current Linux system time
 `date`
 [2] If the date is also out of whack, like 1970 or something, rather than my current time, like 2009, then manually set the correct time yourself
