--- a/h618/zh/13-I2C3-pcf8563rtc修改.md
+++ b/h618/zh/13-I2C3-pcf8563rtc修改.md
@@ -3,6 +3,7 @@
 ### 外设接线
 
 外设pcf8563rtc接在扩展口中的i2c中
+**注意：我们扩展口是不带上拉的，请在外接设备中加入。**
 
 ![image-20241101111011769](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241101111011769.png)
 
