--- a/h618/en/13-I2C3-pcf8563rtc.md
+++ b/h618/en/13-I2C3-pcf8563rtc.md
@@ -4,6 +4,8 @@
 
 The peripheral pcf8563rtc is connected to the i2c in the expansion port
 
+** Note: Our expansion port is not with pull, please add it in the external device. **
+
 ![image-20241101111011769](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241101111011769.png)
 
 Actual connection
