--- a/rk3576/zh/12-功能使用说明.md
+++ b/rk3576/zh/12-功能使用说明.md
@@ -34,9 +34,15 @@ USB设备
 
 
 
-### HDMI OUT 
+### HDMI TX 
 
 ```
-up to 
+HDMI v2.1
+Supports up to 4K@120Hz
+Output data format: RGB/YUV444/YUV422/YUV420 8/10-bit
+Supports CEC (Consumer Electronic Control) and ARC (Audio Return Channel)
+HDCP v2.3 and HDCP v1.4
 ```
+
+
 
