--- a/rk3576/zh/12-功能使用说明.md
+++ b/rk3576/zh/12-功能使用说明.md
@@ -12,6 +12,16 @@
 
 
 
+引脚复用
+
+```
+/d/pinctrl/pinctrl-rockchip-pinctrl/pinmux-pins
+```
+
+
+
+
+
 ## Android 14.0 系统功能
 
 ### USB 3.0 - Type A ( 1 - 3 口)
