--- a/rk3576/zh/12-功能使用说明.md
+++ b/rk3576/zh/12-功能使用说明.md
@@ -17,7 +17,7 @@
 ### pin 引脚复用
 
 ```
-/d/pinctrl/pinctrl-rockchip-pinctrl/pinmux-pins
+cat /d/pinctrl/pinctrl-rockchip-pinctrl/pinmux-pins
 ```
 
 
