--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -210,9 +210,10 @@ add device 4: /dev/input/event1
 Android 验证
 
 ```
-点击设置 或 adb shell am start com.android.settings/com.android.settings.Settings 进入设置
+点击设置 或 (adb shell am start com.android.settings/com.android.settings.Settings) 进入设置
 找到 About phone ，点击 build number 进入开发者模式
 system下，找到developer options
 打开Input下的show taps 和 pointer location
+进入触摸调试模式
 ```
 
