--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -12,7 +12,17 @@
 
 ## LVDS
 
+显示
 
+触控
+```
+echo 8 > /sys/devices/virtual/disp/disp/attr/colorbar
+```
+背光
+```
+/usr/bin/lcd_bright_test 2 255
+/usr/bin/lcd_bright_test 2 0
+```
 
 
 
