--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -8,8 +8,6 @@
 
 ![image-20240713100507130](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/K4B详情页_08.jpg)
 
-
-
 ## LVDS
 
 ### 显示
@@ -172,11 +170,28 @@ ttyS1  ttyS3  ttyS4  ttyS5
 
 
 
+### 调试串口测试
+
+![{50132506-DFF8-4D5F-B81D-B7BF351E7D1F}](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/{50132506-DFF8-4D5F-B81D-B7BF351E7D1F}.png)
+
+
+
+
+
 ### TTL串口测试
 
 **硬件连接**
 
 
+
+
+
+
+``` 
+minicom -D /dev/ttyS4 -b 115200
+echo hello > /dev/ttyS4 
+
+```
 
 
 
