--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -182,26 +182,12 @@ ttyS1  ttyS3  ttyS4  ttyS5
 
 **硬件连接**
 
-
-
-
-
+![image-20241105101842412](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241105101842412.png)
+**测试命令**
 
 ``` 
 minicom -D /dev/ttyS4 -b 115200
-
 ```
-
-
-
-**测试命令**
-
-```
-minicom
-```
-
-
-
 
 
 ### RS232串口测试
