--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -101,6 +101,10 @@ awrpaf_test/        dsp_debug_test/     g2d_test/           Makefile            
 
 
 
+## SD
+
+
+
 
 
 
@@ -199,6 +203,8 @@ minicom -D /dev/ttyS4 -b 115200
 
 
 **测试命令**
+
+stty -F /dev/ttyS5 speed 115200 cs8
 
 
 
