--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -103,9 +103,11 @@ awrpaf_test/        dsp_debug_test/     g2d_test/           Makefile            
 
 ## SD
 
+将格式化后的SD卡插入SD卡槽，系统自动挂载
 
-
-
+``` 
+dd if=/dev/zero of=/mnt/sdcard/mmcblk1p1/test bs=1M count=300 oflag=direct
+```
 
 
 
