--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -180,6 +180,21 @@ ttyS1  ttyS3  ttyS4  ttyS5
 
 ![{50132506-DFF8-4D5F-B81D-B7BF351E7D1F}](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/{50132506-DFF8-4D5F-B81D-B7BF351E7D1F}.png)
 
+**下载串口助手软件**
+
+串口助手软件 可自行下载，下面以Mobaxterm为例
+
+Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
+
+
+
+**Mobaxterm操作步骤**
+
+1. 新建会话窗口
+2. 选择会话窗口类型为serial
+3. 选择串口COM编号（打开Windows系统 设备管理器 -> 端口界面可查看COM编号）
+4. 选择串口波特率115200
+5. 启动会话窗口
 
 
 
