--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -57,8 +57,16 @@ awrpaf_test/        dsp_debug_test/     g2d_test/           Makefile            
 
 ## 喇叭
 
+![1730786055916](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/1730786055916.png)
+
+```
+aplay -Dhw:audiocodec -vv sample-15s.wav
 ```
 
+
+
+``` 
+amixer sset -c audiocodec "Headphone volume" 4 值的范围0-7 对应音量0%-100%
 ```
 
 
