--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -59,11 +59,15 @@ awrpaf_test/        dsp_debug_test/     g2d_test/           Makefile            
 
 ![1730786055916](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/1730786055916.png)
 
+播放音频
+
 ```
 aplay -Dhw:audiocodec -vv sample-15s.wav
 ```
 
 
+
+音量调节
 
 ``` 
 amixer sset -c audiocodec "Headphone volume" 4 值的范围0-7 对应音量0%-100%
@@ -114,7 +118,7 @@ amixer sset -c audiocodec "Headphone volume" 4 值的范围0-7 对应音量0%-10
 将格式化后的SD卡插入SD卡槽，系统自动挂载
 
 ``` 
-dd if=/dev/zero of=/mnt/sdcard/mmcblk1p1/test bs=1M count=300 oflag=direct
+time dd if=/dev/zero of=/mnt/sdcard/mmcblk1p1/test bs=1M count=300 oflag=direct
 ```
 
 
@@ -124,8 +128,6 @@ dd if=/dev/zero of=/mnt/sdcard/mmcblk1p1/test bs=1M count=300 oflag=direct
 ### CAN收发测试
 
 K4B支持两路CAN接口，可将两路CAN连接后做收发测试
-
-
 
 **硬件连接**
 
@@ -163,8 +165,6 @@ $ cansend can1 123#DEADBEEF
 
 K4B 配备4路串口
 
-
-
 **查看串口设备节点**
 
 ```
@@ -193,8 +193,6 @@ ttyS1  ttyS3  ttyS4  ttyS5
 串口助手软件 可自行下载，下面以Mobaxterm为例
 
 Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
-
-
 
 **Mobaxterm操作步骤**
 
