--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -14,6 +14,12 @@ sudo passwd root
 
 
 
+## Linux换默认登录用户
+
+/lib/systemd/system/serial-getty@.service.d/override.conf
+
+![image-20241105154155771](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241105154155771.png)
+
 
 
 
