--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -121,6 +121,12 @@ amixer sset -c audiocodec "Headphone volume" 4 值的范围0-7 对应音量0%-10
 time dd if=/dev/zero of=/mnt/sdcard/mmcblk1p1/test bs=1M count=300 oflag=direct
 ```
 
+## USB
+
+将格式化后的U盘USB接口，系统自动挂载
+``` 
+time dd if=/dev/zero of=/mnt/usb/sda1/test bs=1M count=300 oflag=direct
+```
 
 
 ## CAN
