--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -70,7 +70,7 @@ aplay -Dhw:audiocodec -vv sample-15s.wav
 音量调节
 
 ``` 
-amixer sset -c audiocodec "Headphone volume" 4 值的范围0-7 对应音量0%-100%
+amixer sset -c audiocodec "Headphone volume" 4
 ```
 
 
