--- a/rk3576/zh/12-功能使用说明.md
+++ b/rk3576/zh/12-功能使用说明.md
@@ -85,9 +85,15 @@ AP6256
 
 ### Headphone
 
+```
+```
+
 
 
 ### MIC
+
+```
+```
 
 
 
@@ -97,5 +103,13 @@ AP6256
 
 ### RTC
 
+```
 hym8563
+```
+
+
+
+## FAN
+
+
 
