--- a/rk3576/zh/12-功能使用说明.md
+++ b/rk3576/zh/12-功能使用说明.md
@@ -112,6 +112,9 @@ hym8563
 ### FAN
 
 ```
+console:/ # echo 0 > /sys/class/leds/fan/brightness
+// 关闭风扇
+console:/ # echo 255 > /sys/class/leds/fan/brightness
 ```
 
 
