--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -75,13 +75,12 @@ amixer sset -c audiocodec "Headphone volume" 4
 
 
 
-
-
 ## 麦克风
 
-
-
-
+``` 
+arecord -Dhw:audiocodec -f S24_LE -r  16000  -vvv  test.wav
+aplay -Dhw:audiocodec  -vv test.wav
+```
 
 
 
