--- a/rk3576/zh/12-功能使用说明.md
+++ b/rk3576/zh/12-功能使用说明.md
@@ -93,8 +93,18 @@ AP6256
 ### MIC
 
 ```
-
-录音
+录音支持
+PCM in:
+      Access:   0x000009
+   Format[0]:   0x000044
+   Format[1]:   00000000
+ Format Name:   S16_LE, S24_LE
+   Subformat:   0x000001
+        Rate:   min=8000Hz      max=96000Hz
+    Channels:   min=1           max=2
+ Sample bits:   min=16          max=32
+ Period size:   min=8           max=131072
+Period count:   min=2           max=32768
 ```
 
 
@@ -104,6 +114,19 @@ AP6256
 ```
 支持左声道及右声道喇叭
 注意：接入HDMI时，多媒体音频声音会通过HDMI进行传输，喇叭无多媒体音频声音
+
+播放支持
+PCM out:
+      Access:   0x000009
+   Format[0]:   0x000044
+   Format[1]:   00000000
+ Format Name:   S16_LE, S24_LE
+   Subformat:   0x000001
+        Rate:   min=8000Hz      max=96000Hz
+    Channels:   min=1           max=2
+ Sample bits:   min=16          max=32
+ Period size:   min=8           max=131072
+Period count:   min=2           max=32768
 ```
 
 
