--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -51,6 +51,11 @@ awrpaf_test/        dsp_debug_test/     g2d_test/           Makefile            
 
 ## 耳机
 
+``` 
+tinymix set "Headphone Switch" 1
+aplay -Dhw:audiocodec  -vv sample-15s.wav
+```
+
 
 
 
@@ -63,14 +68,6 @@ awrpaf_test/        dsp_debug_test/     g2d_test/           Makefile            
 
 ```
 aplay -Dhw:audiocodec -vv sample-15s.wav
-```
-
-
-
-音量调节
-
-``` 
-amixer sset -c audiocodec "Headphone volume" 4
 ```
 
 
