--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -114,10 +114,10 @@ date -s "2024-11-06 10:30:00" && hwclock -w -f /dev/rtc1
 断电，等待若干时间后，重新接上开发板电源
 
 ``` 
-hwclock -f /dev/rtc1 
+date && hwclock -f /dev/rtc1 
 ```
 
-若系统时间与当前时间一致，则RTC功能正常
+若系统时间与当前RTC时间一致，则RTC功能正常
 
 
 
