--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -83,9 +83,23 @@ aplay -Dhw:audiocodec  -vv test.wav
 
 ## WIFI
 
+**linux 平台命令行**
 
+```shell
+# vi /etc/wpa_supplicant.conf
+# cat /etc/wpa_supplicant.conf
+ctrl_interface=/var/run/wpa_supplicant
+ap_scan=1
+update_config=1
 
-
+network={
+        ssid="wifi_oranth_2.4"
+        psk="123456789"
+        key_mgmt=WPA-PSK
+}
+# wpa_supplicant -D nl80211 -i wlan0 -c /etc/wpa_supplicant.conf -B
+# reboot
+```
 
 
 
