--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -98,7 +98,8 @@ network={
         key_mgmt=WPA-PSK
 }
 # wpa_supplicant -D nl80211 -i wlan0 -c /etc/wpa_supplicant.conf -B
-# reboot
+# udhcpc -i wlan0
+获取ip后可连网
 ```
 
 
