--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -86,6 +86,7 @@ aplay -Dhw:audiocodec  -vv test.wav
 **linux 平台命令行**
 
 ```shell
+# insmod /lib/modules/5.4.61/8723bu.ko
 # vi /etc/wpa_supplicant.conf
 # cat /etc/wpa_supplicant.conf
 ctrl_interface=/var/run/wpa_supplicant
@@ -99,7 +100,6 @@ network={
 }
 # wpa_supplicant -D nl80211 -i wlan0 -c /etc/wpa_supplicant.conf -B
 # udhcpc -i wlan0
-获取ip后可连网
 ```
 
 
