--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -140,6 +140,29 @@ date && hwclock -f /dev/rtc1
 
 ## 4G Mobile
 
+### 
+
+```
+确认usb模块是否加载
+lsusb
+
+确认串口结点是否生成
+ls /dev/ttyUSB*
+
+插拔电话卡重新拨号
+```
+
+```
+pppd call quectel-ppp &
+
+ping www.baidu.com 测试
+
+可能会出现没播通情况
+通过ps -ef | grep pppd 查看进程号
+kill -9 (进程号)
+重新拨号 pppd call quectel-ppp &
+```
+
 
 
 
