--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -106,10 +106,11 @@ network={
 
 ## 蓝牙
 
+``` hciconfig -a
 hciconfig -a
+hciconfig hci0 up
 hcitool scan
-
-
+```
 
 
 
@@ -134,8 +135,6 @@ date && hwclock -f /dev/rtc1
 ```
 
 若系统时间与当前RTC时间一致，则RTC功能正常
-
-
 
 
 
