--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -83,6 +83,24 @@ $ reboot
 ### 设置wifi热点模式
 
 ```
+iw list | grep AP
+#查看是否支持AP模式
+Device supports AP-side u-APSD.
+		 * AP
+		 * AP/VLAN
+		HE Iftypes: AP
+		HE Iftypes: AP
+		 * wake up on EAP identity request
+		 * AP/VLAN
+		 * #{ managed } <= 1, #{ AP, P2P-client, P2P-GO } <= 1, #{ P2P-device } <= 1,
+	Driver supports full state transitions for AP/GO clients
+	Driver/device bandwidth changes during BSS lifetime (AP/GO mode)
+		 * AP: 0x00 0x10 0x20 0x30 0x40 0x50 0x60 0x70 0x80 0x90 0xa0 0xb0 0xc0 0xd0 0xe0 0xf0
+		 * AP/VLAN: 0x00 0x10 0x20 0x30 0x40 0x50 0x60 0x70 0x80 0x90 0xa0 0xb0 0xc0 0xd0 0xe0 0xf0
+		 * AP: 0x00 0x20 0x40 0xa0 0xb0 0xc0 0xd0
+		 * AP/VLAN: 0x00 0x20 0x40 0xa0 0xb0 0xc0 0xd0
+# AP/VLAN则可以表示硬件支持
+
 #创建依赖
 sudo apt-get install util-linux hostapd dnsmasq iptables iproute2 haveged 
 
