--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -108,7 +108,7 @@ sudo apt-get install util-linux hostapd dnsmasq iptables iproute2 haveged
 sudo iw dev <wirelessname> interface add <virtualwlanname> type __ap  
 # <wirelessname> 是真实无线网卡名，可通过ifconfig查看，<virtualwlanname>是虚拟的无线网卡名
 #例如命令 
-sudo iw dev wlo1 interface add wlo2 type __ap
+sudo iw dev wlan0 interface add wlo2 type __ap
 
 #为虚拟网卡添加物理地址
 sudo ip link set dev <virtualwlanname> address 22:33:44:55:66:00
@@ -148,7 +148,7 @@ sudo create_ap -c 11 <virtualwlanname> <wirelessname> <SSID> <password>
 
 # <wirelessname> 是你的无线网卡的姓名，<virtualwlanname> 虚拟网卡名，<SSID> <password>分别是创建的热点wifi名和密码
 #例如 
-sudo create_ap -c 11 wlo2 wlo1 m3 88888888
+sudo create_ap -c 11 wlo2 wlan0 m3 88888888
 
 3. 如果创建的热点卡住
 开启热点时报如下错误:
