--- a/a133/zh/13-硬件工厂测试.md
+++ b/a133/zh/13-硬件工厂测试.md
@@ -1,12 +1,12 @@
 # 13-硬件工厂测试
 
-
-
-
+[TOC]
 
 ## 进入硬件测试程序
 
+鼠标（或触摸），上划动作，打开应用界面，FT-618为工厂测试APP 。
 
+![image-20241112153822337](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20241112153822337.png)
 
 
 
