--- a/a133/zh/13-硬件工厂测试.md
+++ b/a133/zh/13-硬件工厂测试.md
@@ -12,6 +12,8 @@
 
 ## FT-618
 
+![image-20241112154153730](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20241112154153730.png)
+
 
 
 ## 硬件测试程序使用说明
