--- a/a133/zh/13-硬件工厂测试.md
+++ b/a133/zh/13-硬件工厂测试.md
@@ -20,25 +20,25 @@
 
 ### 蓝牙测试
 
-界面会显示蓝牙功能OK，以及会列出识别数量，以及识别的设备
+FT-618界面会显示蓝牙功能OK，以及会列出识别数量，以及识别的设备
 
 
 
 ### 无线测试
 
-界面会显示2.4G/5G的WIFI数量，WIFI识别设备列表
+FT-618界面会显示2.4G/5G的WIFI数量，WIFI识别设备列表
 
 
 
 ### 有线测试/以太网测试
 
-界面会显示IP地址、网关、网段、域名
+FT-618界面会显示IP地址、网关、网段、域名
 
 
 
 ### 按键测试
 
-红外IR遥控按键、按键、鼠标事件，界面会显示按键信息
+FT-618界面会显示按键信息，红外IR遥控按键、按键、鼠标事件
 
 
 
@@ -48,7 +48,7 @@
 
 
 
-老化
+### 老化测试
 
 
 
