--- a/a133/zh/13-硬件工厂测试.md
+++ b/a133/zh/13-硬件工厂测试.md
@@ -30,7 +30,7 @@ FT-618界面会显示2.4G/5G的WIFI数量，WIFI识别设备列表
 
 
 
-### 有线测试/以太网测试
+### 有线测试
 
 FT-618界面会显示IP地址、网关、网段、域名
 
@@ -49,6 +49,10 @@ FT-618界面的版本信息会列举主板的规格信息
 
 
 ### 老化测试
+
+FT-618界面右边会播放视频，进行老化测试
+
+
 
 
 
