--- a/a133/zh/13-硬件工厂测试.md
+++ b/a133/zh/13-硬件工厂测试.md
@@ -8,13 +8,13 @@
 
 方式二：红外遥控，依次按下 758521 ，会调用测试APP
 
-![image-20241112153822337](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20241112153822337.png)
+![image-20241112153822337](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241112153822337.png)
 
 
 
 ## FT-618 界面
 
-![image-20241112154153730](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20241112154153730.png)
+![image-20241112154153730](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241112154153730.png)
 
 
 
