--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -35,9 +35,19 @@ Ubuntu22.04 系统 仅提供镜像文件，编译可参考 ARMBIAN SDK
 
 ## 备份SD卡系统
 
+接好U盘在电脑上，大小至少16GB以上，打包出来的镜像会比较大
 
+在板子上运行我们的打包脚本
 
+```
+sudo ./out_rootfs.sh /mnt/usb/ -t ext4
+```
 
+> 生成的包名格式如：Ubuntu22.04.5LTS_ztl_ext4_202411131114.img
+
+等待打包结束
+
+将这个镜像替换原本的rootfs镜像即可
 
 
 
