--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -35,6 +35,8 @@ Ubuntu22.04 系统 仅提供镜像文件，编译可参考 ARMBIAN SDK
 
 ## 备份SD卡系统
 
+#### 全志-tina
+
 接好U盘在电脑上，大小至少16GB以上，打包出来的镜像会比较大
 
 在板子上运行我们的打包脚本
@@ -47,7 +49,27 @@ sudo ./out_rootfs.sh /mnt/usb/ -t ext4
 
 等待打包结束
 
-将这个镜像替换原本的rootfs镜像即可
+将这个镜像替换原本的out/h618-linux/rootfs.img
+
+修改镜像打包分区
+
+```
+diff --git a/device/config/chips/h618/configs/p2/linux/sys_partition.fex b/device/config/chips/h618/configs/p2/linux/sys_partition.fex
+index a5fa88c88..67fb67b5b 100755
+--- a/device/config/chips/h618/configs/p2/linux/sys_partition.fex
++++ b/device/config/chips/h618/configs/p2/linux/sys_partition.fex
+@@ -53,7 +53,7 @@ size = 16384
+
+ [partition]
+     name         = rootfs
+-    size         = 8388608
++    size         = 16777216  (修改到能容纳你rootfs.img的大小)
+     downloadfile = "rootfs.fex"
+     user_type    = 0x8000
+
+```
+
+然后`pack` 打包成固件烧录即可
 
 
 
