--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -51,6 +51,10 @@ sudo ./out_rootfs.sh /mnt/usb/ -t ext4
 
 将这个镜像替换原本的out/h618-linux/rootfs.img
 
+如果需要对rootfs.img进行再进一步的修改，可以`sudo mount ./rootfs.img  /test_rootfs/` 挂载出 rootfs.img里面的内容
+
+
+
 修改镜像打包分区
 
 ```
@@ -70,8 +74,6 @@ index a5fa88c88..67fb67b5b 100755
 ```
 
 然后`pack` 打包成固件烧录即可
-
-
 
 ## 定制系统功能
 
