--- a/a133/zh/13-硬件工厂测试.md
+++ b/a133/zh/13-硬件工厂测试.md
@@ -20,6 +20,16 @@
 
 ## 硬件测试程序使用说明
 
+### 屏幕测试
+
+软件默认烧录 android10
+
+Signal LVDS 7寸屏
+
+支持触摸
+
+
+
 ### 蓝牙测试
 
 FT-618界面会显示蓝牙功能OK，以及会列出识别数量，以及识别的设备
