--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -197,3 +197,14 @@ sudo create_ap --stop <virtualwlanname>  #<virtualwlanname> 虚拟网卡名
 
 ```
 
+
+
+### SSH登录
+
+ubuntu-server版系统默认安装了有SSH
+打开Windows cmd
+
+```
+ssh kickpi@<IP>   //密码 kickpi
+```
+
