--- a/h618/en/13-I2C3-pcf8563rtc.md
+++ b/h618/en/13-I2C3-pcf8563rtc.md
@@ -23,7 +23,7 @@ Actual connection
 ​	Modified Kconfig added
 
 ```
-//make menuconfig 的选项
+//make menuconfig options
 config RTC_DRV_PCF8563
 	tristate "Philips PCF8563/Epson RTC8564"
 	help
