--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -530,6 +530,17 @@ fdisk -l
 
 
 
+SD卡，
+
+```
+Device         Boot Start       End   Sectors  Size Id Type
+/dev/mmcblk1p1      32768 124735487 124702720 59.5G  7 HPFS/NTFS/exFAT
+```
+
+
+
+
+
 ## NFS配置
 
 **环境配置**
