--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -334,6 +334,8 @@ numid=9,iface=MIXER,name='headphone gain'
 
 
 
+### 开启耳机开关
+
 查看耳机开关状态
 
 ```
@@ -345,9 +347,7 @@ numid=14,iface=MIXER,name='Headphone Switch'
   : values=off
 ```
 
-
-
-### 开启耳机开关
+打开耳机
 
 ```
 # amixer cset numid=14,iface=MIXER,name='Headphone Switch' 1
