--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -298,7 +298,7 @@ tinycap file.wav -D 0 -d 0  -c 2 -r 48000 -b 16 -T 10
 
 ## Linux 功能测试
 
-### 音频工具环境
+### alsa工具环境
 
 ```
 sudo apt install alsa-utils
@@ -307,8 +307,6 @@ sudo apt install alsa-utils
 ```
 sudo apt-get install sox libsox-fmt-all
 ```
-
-
 
 列出控制列表
 
@@ -340,15 +338,11 @@ amixer cget + [controls内容]
 
 
 
-
-
 ### 开启耳机开关
 
 查看耳机开关状态
 
 ```
-
-
 # amixer cget numid=14,iface=MIXER,name='Headphone Switch'
 numid=14,iface=MIXER,name='Headphone Switch'
   ; type=BOOLEAN,access=rw------,values=1
