--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -473,6 +473,8 @@ hcitool scan
 
 ### 4G 模块测试
 
+注意事项
+
 ```
 确认usb模块是否加载
 lsusb
@@ -481,9 +483,10 @@ lsusb
 ls /dev/ttyUSB*
 
 插入电话卡，建议重启
+注意EC20模块天线，以及测试的环境
 ```
 
-
+拨号测试
 
 ```
 pppd call quectel-ppp &
