--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -511,10 +511,11 @@ kill -9 (进程号)
 ### sd卡 测试
 
 ```
+$ fdisk -l
 Device         Boot Start       End   Sectors  Size Id Type
 /dev/mmcblk1p1      32768 124735487 124702720 59.5G  7 HPFS/NTFS/exFAT
 
-mount /dev/mmcblk1p1 /mnt/
+$ mount /dev/mmcblk1p1 /mnt/
 ```
 
 
@@ -525,7 +526,6 @@ mount /dev/mmcblk1p1 /mnt/
 cat /proc/bus/input/devices
 apt install evtest
 evtest
-
 ```
 
 
