--- a/h618/zh/13-I2C3-pcf8563rtc修改.md
+++ b/h618/zh/13-I2C3-pcf8563rtc修改.md
@@ -86,7 +86,7 @@ hwclock
 4.将Linux系统时间设置到硬件rtc中
 hwclock -w
 5.再次查看硬件rtc时间是否和系统中的一致
-hwclcok
+hwclock
 如果驱动正确工作的话，此处显示的时间，就应该和你当前的系统时间一致了，也就是传说中的，时间同步了。。。
 否则，就说明你驱动工作不正确，没有正确地把系统时间设置进入硬件rtc中，就要你自己回去调试驱动，找原因去。
 6.等个几秒，再次输入：
