--- a/rk356x/zh/10-系统镜像烧录.md
+++ b/rk356x/zh/10-系统镜像烧录.md
@@ -166,11 +166,7 @@ Maskrom模式 常用于系统损坏后，强制烧录镜像
 
 Debian系统用户名/密码：linaro/linaro
 
-Ubuntu系统用户因版本更替有两种
-
-​			用户名/密码：kickpi/kickpi
-
-​			用户名/密码：rpdzkj/rpdzkj
+Ubuntu系统用户名/密码：kickpi/kickpi
 
 
 
