--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -2,7 +2,7 @@
 
 
 
-### Linux系统登陆用户密码
+## Linux系统登陆用户密码
 
 Ubuntu系统用户名/密码：kickpi/kickpi
 
@@ -74,6 +74,18 @@ index a5fa88c88..67fb67b5b 100755
 ```
 
 然后`pack` 打包成固件烧录即可
+
+
+
+
+
+###
+
+
+
+
+
+
 
 ## 定制系统功能
 
