--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -79,7 +79,30 @@ index a5fa88c88..67fb67b5b 100755
 
 
 
-###
+### AW-IMAGE
+
+AW-IMAGE SDK替换指定rootfs.img说明
+
+```
+scripts/debootstrap.sh
+
+@@ -612,6 +612,12 @@ create_image()
+ 
+        # stage: write u-boot
+        write_uboot $LOOP
++       
++       mv $MOUNT/boot $MOUNT/../
++       rm $MOUNT/* -rf
++       tar -xf ${BUILD_DIR}/rootfs-base/stage3-arm64-openrc-20240707T225101Z.tar -C $MOUNT/
++       cp -r ${SOURCE_DIR}/lbc-firmware/* $MOUNT/
++       mv $MOUNT/../boot $MOUNT/
+ 
+        # fix wrong / permissions
+        chmod 755 $MOUNT
+
+```
+
+
 
 
 
