--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -35,7 +35,7 @@ Ubuntu22.04 系统 仅提供镜像文件，编译可参考 ARMBIAN SDK
 
 ## 备份SD卡系统
 
-#### 全志-tina
+### 全志-tina
 
 接好U盘在电脑上，大小至少16GB以上，打包出来的镜像会比较大
 
@@ -91,15 +91,18 @@ scripts/debootstrap.sh
         # stage: write u-boot
         write_uboot $LOOP
 +       
++		# 保留boot分区、删除原ROOTFS内容
 +       mv $MOUNT/boot $MOUNT/../
 +       rm $MOUNT/* -rf
++
++		# 替换自定义ROOTFS,以下示例为解压tar包,其他替换方式可自行修改
 +       tar -xf ${BUILD_DIR}/rootfs-base/stage3-arm64-openrc-20240707T225101Z.tar -C $MOUNT/
-+       cp -r ${SOURCE_DIR}/lbc-firmware/* $MOUNT/
++
++		# 回溯boot分区
 +       mv $MOUNT/../boot $MOUNT/
  
         # fix wrong / permissions
         chmod 755 $MOUNT
-
 ```
 
 
