--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -35,12 +35,14 @@ Ubuntu22.04 系统 仅提供镜像文件，编译可参考 ARMBIAN SDK
 
 ## 备份SD卡系统
 
+### 全志-tina
+
 接好U盘在电脑上，大小至少16GB以上，打包出来的镜像会比较大
 
 在板子上运行我们的打包脚本
 
 ```
-sudo ./out_rootfs.sh /mnt/usb/ -t ext4
+sudo ./ff_export_rootfs /mnt/usb/ -t ext4
 ```
 
 > 生成的包名格式如：Ubuntu22.04.5LTS_ztl_ext4_202411131114.img
@@ -51,7 +53,7 @@ sudo ./out_rootfs.sh /mnt/usb/ -t ext4
 
 如果需要对rootfs.img进行再进一步的修改，可以`sudo mount ./rootfs.img  /test_rootfs/` 挂载出 rootfs.img里面的内容
 
-### 全志-tina
+
 
 修改镜像打包分区
 
