--- a/a133/zh/13-硬件工厂测试.md
+++ b/a133/zh/13-硬件工厂测试.md
@@ -18,7 +18,13 @@
 
 
 
-## 硬件测试程序使用说明
+## 测试程序使用说明
+
+### CPU 性能测试
+
+
+
+
 
 ### 屏幕测试
 
@@ -64,7 +70,7 @@ FT-618界面右边会播放视频，进行老化测试
 
 
 
-### CPU 性能测试
+
 
 
 
