--- a/a133/zh/13-硬件工厂测试.md
+++ b/a133/zh/13-硬件工厂测试.md
@@ -68,7 +68,9 @@ FT-618界面右边会播放视频，进行老化测试
 
 ### CPU 性能测试
 
-打开APK，进行 CPU 性能测试 60 s
+CPU性能测试，需要打开CalculateTest2 APK，进行 CPU 性能测试 60 s
+
+![image-20241123122919765](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20241123122919765.png)
 
 ![image-20241123122820436](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20241123122820436.png)
 
