--- a/a133/zh/13-硬件工厂测试.md
+++ b/a133/zh/13-硬件工厂测试.md
@@ -12,7 +12,7 @@
 
 
 
-## FT-618 界面
+## FT-618 测试程序界面
 
 ![image-20241112154153730](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241112154153730.png)
 
