--- a/rk3576/zh/12-功能使用说明.md
+++ b/rk3576/zh/12-功能使用说明.md
@@ -30,7 +30,10 @@ cat /d/pinctrl/pinctrl-rockchip-pinctrl/pinmux-pins
 USB设备
 	USB鼠标、U盘
 
-U盘
+U盘测速
+
+sync; echo 3 > /proc/sys/vm/drop_caches
+
 ```
 
 
