--- a/rk3576/zh/12-功能使用说明.md
+++ b/rk3576/zh/12-功能使用说明.md
@@ -33,9 +33,11 @@ USB设备
 U盘测速
 sync; echo 3 > /proc/sys/vm/drop_caches
 
-time dd if=/mnt/media_rw/490D-CC9B/root/tmp1/new_file.img of=/dev/null bs=1M count=1024
+# 写操作测试
+time dd if=/dev/zero of=/mnt/media_rw/490D-CC9B/new_file.img bs=1M count=2048
 
-time dd if=/dev/null of=/mnt/media_rw/490D-CC9B/root/tmp1/new_file.img bs=1M count=1024
+# 读操作测试
+time dd if=/mnt/media_rw/490D-CC9B/new_file.img of=/dev/null bs=1M count=2048
 
 ```
 
