--- a/rk3576/zh/12-功能使用说明.md
+++ b/rk3576/zh/12-功能使用说明.md
@@ -41,7 +41,8 @@ time dd if=/dev/zero of=/mnt/media_rw/490D-CC9B/new_file.img bs=1M count=2048
 # 读操作测试
 time dd if=/mnt/media_rw/490D-CC9B/new_file.img of=/dev/null bs=1M count=2048
 
-目前测试普通U盘：写速率 49 M/s，
+目前测试普通U盘：写速率 49 M/s，读速率 108 M/s
+测试结果仅供参考，实际根据设备不同存在差异
 ```
 
 
