--- a/rk3576/zh/12-功能使用说明.md
+++ b/rk3576/zh/12-功能使用说明.md
@@ -26,12 +26,16 @@ cat /d/pinctrl/pinctrl-rockchip-pinctrl/pinmux-pins
 
 ### USB 3.0 - Type A ( 1 - 3 口)
 
+USB鼠标测速
+
 ```
-USB设备
-	USB鼠标、U盘
+```
+
+
 
 U盘测速
 
+```
 # 测速前，清除缓存
 sync; echo 3 > /proc/sys/vm/drop_caches
 
