--- a/rk3576/zh/12-功能使用说明.md
+++ b/rk3576/zh/12-功能使用说明.md
@@ -26,9 +26,10 @@ cat /d/pinctrl/pinctrl-rockchip-pinctrl/pinmux-pins
 
 ### USB 3.0 - Type A ( 1 - 3 口)
 
-USB鼠标测速
+USB鼠标测试
 
 ```
+支持鼠标识别，正常使用
 ```
 
 
