--- a/rk3576/zh/12-功能使用说明.md
+++ b/rk3576/zh/12-功能使用说明.md
@@ -22,7 +22,9 @@ cat /d/pinctrl/pinctrl-rockchip-pinctrl/pinmux-pins
 
 计算方式
 
-GPIO1-A1 = gpio1 - 0 + 1
+GPIO1-A1 = gpio1 - 0 + 1 = gpio1 - 1
+
+GPIO0-D3 = gpio0 - (4*8 + 3) = 
 
 
 
