--- a/rk3576/zh/12-功能使用说明.md
+++ b/rk3576/zh/12-功能使用说明.md
@@ -24,7 +24,7 @@ cat /d/pinctrl/pinctrl-rockchip-pinctrl/pinmux-pins
 
 GPIO1-A1 = gpio1 - 0 + 1 = gpio1 - 1 = (1 * 32) + 1 = 33
 
-GPIO0-D3 = gpio0 - (4*8 + 3) = gpio0 - 35
+GPIO0-D3 = gpio0 - ((4 - 1) * 8 + 3) = gpio0 - 27 = 0*32 + 27 = 27
 
 
 
@@ -142,7 +142,6 @@ Period count:   min=2           max=32768
 
 ```
 支持左声道及右声道喇叭
-注意：接入HDMI时，多媒体音频声音会通过HDMI进行传输，喇叭无多媒体音频声音
 
 播放支持
 PCM out:
