--- a/rk3576/zh/12-功能使用说明.md
+++ b/rk3576/zh/12-功能使用说明.md
@@ -24,7 +24,7 @@ cat /d/pinctrl/pinctrl-rockchip-pinctrl/pinmux-pins
 
 GPIO1-A1 = gpio1 - 0 + 1 = gpio1 - 1 = (1 * 32) + 1 = 33
 
-GPIO0-D3 = gpio0 - ((4 - 1) * 8 + 3) = gpio0 - 27 = 0*32 + 27 = 27
+GPIO0-D3 = gpio0 - ((4 - 1) * 8 + 3) = gpio0 - 27 = (0 * 32) + 27 = 27
 
 
 
