--- a/rk3576/zh/12-功能使用说明.md
+++ b/rk3576/zh/12-功能使用说明.md
@@ -14,15 +14,17 @@
 
 
 
-### pin 引脚复用
+### pin 
+
+Rockchip Pin的ID按照 控制器(bank)+端口(port)+索引序号(pin) 组成。
+
+列举pin及引脚复用
 
 ```
 cat /d/pinctrl/pinctrl-rockchip-pinctrl/pinmux-pins
 ```
 
 计算方式
-
-
 
 ```
 GPIO1-A1	= gpio1 - ((1 - 1) * 8 + 1)		= gpio1 - 1		= (1 * 32) + 1 		= 33
