--- a/rk3576/zh/12-功能使用说明.md
+++ b/rk3576/zh/12-功能使用说明.md
@@ -14,9 +14,15 @@
 
 
 
-### pin 
+### 引脚控制 Pinctrl 
 
 Rockchip Pin的ID按照 控制器(bank)+端口(port)+索引序号(pin) 组成。
+
+* 控制器和GPIO控制器数量一致
+
+* 端口固定 A、B、C和D
+
+* 索引序号固定 0、1、2、3、4、5、6、7
 
 列举pin及引脚复用
 
